--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "./traefik.yml:/etc/traefik/traefik.yml"
       - "./acme.json:/acme.json"
+      - "./dynamic.yml:/dynamic.yml"
     labels:
       - "traefik.enable=true"
     environment:
